Adds Calling Convention and Stack Frames section

--- a/lessons/lucy-nicholas-xinan_0_x86/Makefile
+++ b/lessons/lucy-nicholas-xinan_0_x86/Makefile
@@ -1,6 +1,11 @@
-all: compile_c_source
+all: compile_x64 compile_x86
 
-compile_c_source:
+compile_x64:
 	for f in $$(ls ./src/); do \
-		gcc -O0 ./src/$$f -o ./build/$${f%.*}; \
+		gcc -O0 ./src/$$f -o ./build/$${f%.*}_x64; \
+	done
+
+compile_x86:
+	for f in $$(ls ./src/); do \
+		gcc -m32 -O0 ./src/$$f -o ./build/$${f%.*}_x86; \
 	done
